tests/snapshots/snapshots__pipeline@streams_forin.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/streams_forin.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Eq VOpen For Ident("x") In Ident("sof") LParen LBracket Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 2, suffix: None }) Comma Int(IntLit { value: 3, suffix: None }) RBracket RParen Do VOpen Ident("println") LParen Ident("x") RParen VClose VSemi Ident("println") LParen Ident("srange") LParen Int(IntLit { value: 0, suffix: None }) Comma Int(IntLit { value: 4, suffix: None }) RParen Dot Ident("smap") LParen Lambda LParen Ident("n") RParen Arrow Ident("n") Star Ident("n") RParen Dot Ident("ssum") LParen RParen RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Sugar(
                            For(
                                "x",
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "sof",
                                            ),
                                            span: 23..26,
                                        },
                                        [
                                            Spanned {
                                                node: List(
                                                    [
                                                        Spanned {
                                                            node: Int(
                                                                IntLit {
                                                                    value: 1,
                                                                    suffix: None,
                                                                },
                                                            ),
                                                            span: 28..29,
                                                        },
                                                        Spanned {
                                                            node: Int(
                                                                IntLit {
                                                                    value: 2,
                                                                    suffix: None,
                                                                },
                                                            ),
                                                            span: 31..32,
                                                        },
                                                        Spanned {
                                                            node: Int(
                                                                IntLit {
                                                                    value: 3,
                                                                    suffix: None,
                                                                },
                                                            ),
                                                            span: 34..35,
                                                        },
                                                    ],
                                                ),
                                                span: 27..36,
                                            },
                                        ],
                                    ),
                                    span: 23..37,
                                },
                                [],
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "println",
                                            ),
                                            span: 45..52,
                                        },
                                        [
                                            Spanned {
                                                node: Var(
                                                    "x",
                                                ),
                                                span: 53..54,
                                            },
                                        ],
                                    ),
                                    span: 45..55,
                                },
                            ),
                        ),
                        span: 14..55,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 58..65,
                            },
                            [
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "ssum",
                                            ),
                                            span: 66..66,
                                            synth: true,
                                        },
                                        [
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "smap",
                                                        ),
                                                        span: 66..66,
                                                        synth: true,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Call(
                                                                Spanned {
                                                                    node: Var(
                                                                        "srange",
                                                                    ),
                                                                    span: 66..72,
                                                                },
                                                                [
                                                                    Spanned {
                                                                        node: Int(
                                                                            IntLit {
                                                                                value: 0,
                                                                                suffix: None,
                                                                            },
                                                                        ),
                                                                        span: 73..74,
                                                                    },
                                                                    Spanned {
                                                                        node: Int(
                                                                            IntLit {
                                                                                value: 4,
                                                                                suffix: None,
                                                                            },
                                                                        ),
                                                                        span: 76..77,
                                                                    },
                                                                ],
                                                            ),
                                                            span: 66..78,
                                                        },
                                                        Spanned {
                                                            node: Lam(
                                                                [
                                                                    Param {
                                                                        name: "n",
                                                                        ty: None,
                                                                        borrow: false,
                                                                        default: None,
                                                                    },
                                                                ],
                                                                Spanned {
                                                                    node: Bin(
                                                                        Mul,
                                                                        Spanned {
                                                                            node: Var(
                                                                                "n",
                                                                            ),
                                                                            span: 92..93,
                                                                        },
                                                                        Spanned {
                                                                            node: Var(
                                                                                "n",
                                                                            ),
                                                                            span: 96..97,
                                                                        },
                                                                    ),
                                                                    span: 92..97,
                                                                },
                                                            ),
                                                            span: 84..97,
                                                        },
                                                    ],
                                                ),
                                                span: 66..98,
                                            },
                                        ],
                                    ),
                                    span: 66..105,
                                },
                            ],
                        ),
                        span: 58..106,
                    },
                ),
                span: 14..106,
            },
            wheres: [],
            span: 0..106,
        },
    ],
}

== types ==
Scope Error: in `main`: unbound variable 'sof'
   ╭─[ <source>:2:12 ]
   │
 2 │   for x in sof([1, 2, 3]) do
   │            ─┬─  
   │             ╰─── in `main`: unbound variable 'sof'
───╯
